Table grocery {
  id int [pk, increment]
  name varchar(255) [not null]
  price decimal(10, 2) [not null]
  quantity int [not null]
}

Table order {
  id int [pk, increment]
  user_id int [not null]
  created_at timestamp [not null, default: `now()`]
}

Table order_item {
  id int [pk, increment]
  order_id int [ref: > order.id]
  grocery_id int [ref: > grocery.id]
  quantity int [not null]
}

Table user {
  id int [pk, increment]
  username varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  password_salt varchar(255) [not null]
  is_admin boolean [not null, default: false]
}
